--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
     },
     "autoload": {
         "psr-0": {
-            "NetBox\\ProxyManager\\": "src/"
+            "NetBox\\ProxyManager\\": "lib/"
         }
     }
 }
